# ollama-commit

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ollama_commit/: __init__.py  cli.py  git.py  hook.py  ollama.py
tests/: test_cli.py  test_git.py  test_hook.py  test_ollama.py  test_ollama_generate.py
