[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ollama-commit"
version = "0.1.0"
description = "Generate Git commit messages using local LLMs via Ollama"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Dennis Reichenberg" }]
keywords = ["git", "ollama", "llm", "ai", "commit", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio", "ruff", "mypy"]

[project.scripts]
ollama-commit = "ollama_commit.cli:main"

[project.urls]
Homepage = "https://github.com/dennisreichenberg/ollama-commit"
Repository = "https://github.com/dennisreichenberg/ollama-commit"
Issues = "https://github.com/dennisreichenberg/ollama-commit/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
